fixed choices alignment with quesitons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,28 +11,23 @@ body{
     display: none;
 }
 #question{
-    width:500px;
-    height : 125px;
-    position: absolute;
     right:0;
     top:0;
 }
 #question p{
+    text-align: center;
     margin : 0;
     padding : 15px;
     font-size: 1.25em;
 }
 
 #choices{
-    width : 480px;
-    position: absolute;
+    position:relative;
     right : 0;
-    top : 125px;
     padding : 10px
 }
 .choice{
-    display: inline-block;
-    width : 300px;
+    width : 200px;
     text-align: center;
     background-color: rgb(116, 163, 22);
     border : 1px solid grey;
